--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -62,18 +62,14 @@ jobs:
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
       # Step 7: Terraform Apply (only on 'main' branch)
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/main'
-        working-directory: ./grafana-tf/${{ matrix.environment }}
-        run: |
-          terraform apply -auto-approve -input=false \
-          -var-file="${{ matrix.environment }}.tfvars"
-        env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-<<<<<<< HEAD
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-=======
-          ARM_TENANT_ID: ${{ secrets.ARM_TENA
->>>>>>> e618f23bf55bae8c5204a883209255e2bb7fa866
+      # - name: Terraform Apply
+      #   if: github.ref == 'refs/heads/main'
+      #   working-directory: ./grafana-tf/${{ matrix.environment }}
+      #   run: |
+      #     terraform apply -auto-approve -input=false \
+      #     -var-file="${{ matrix.environment }}.tfvars"
+      #   env:
+      #     ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      #     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
