--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -36,7 +36,7 @@ jobs:
 
       # Step 3: Initialize Terraform in the specific environment folder
       - name: Terraform Init
-        working-directory: ./infrastructuregithub/grafana-tf/${{ matrix.environment }}
+        working-directory: ./grafana-tf/env/${{ matrix.environment }}
         run: terraform init -input=false
 
       # Step 4: Format Check
